--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ form div {
 }
 
 .add-to-cart {
-  background-color: orange; /* Green */
+  background-color: lightblue; /* Green */
   border: none;
   color: white;
   padding: 10px 10px;
