--- a/public/style.css
+++ b/public/style.css
@@ -70,6 +70,7 @@ form div {
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-family: 'Slabo 27px', serif; 
   font-size: 14px;
   border-radius: 15px;
 }
