--- a/public/style.css
+++ b/public/style.css
@@ -75,3 +75,11 @@ form div {
   border-radius: 15px;
 }
 
+.add-to-cart:hover {
+  background-color: darkblue;
+  transition: 0.7s;
+}
+
+.add-to-cart:active {
+  background-color: darkblue;
+}
