--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,23 @@ form div {
   display: inline-block;
 }
 
+.nav-bar {
+  background-color: 	#ffe4b5;
+  display: flex; 
+  flex-direction: column;
+  align-content: center;
+  top: 0;
+  width: 100%;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .element-list {
   display: flex;
   flex-direction: row;
