working clear cart with some bugs

--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@ form div {
 }
 
 .add-to-cart {
-  background-color: lightblue; /* Green */
+  background-color: #6495ED; /* Green */
   border: none;
   color: white;
   padding: 10px 10px;
