--- a/public/style.css
+++ b/public/style.css
@@ -42,7 +42,7 @@ form div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .single-element {
@@ -51,6 +51,7 @@ form div {
   padding: 0.5rem; 
   border: 3px solid #D3D3D3; 
   border-radius: 25px;
+  align-items: center;
 }
 
 .big-single-container {
@@ -70,7 +71,7 @@ form div {
 }
 
 .product-image {
-  width: 60%;
+  width: 75%;
   margin: auto auto 2rem auto;
   height: auto; 
   padding: 0.5rem;
@@ -114,3 +115,8 @@ form div {
   font-size: 14px;
   border-radius: 15px;
 }
+
+h3, h2{ 
+  text-align: center;
+}
+
