--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,7 @@ textarea {
   display: flex; 
   flex-direction: row; 
   flex-wrap: wrap; 
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .big-single {
@@ -78,6 +78,7 @@ textarea {
   background-color: 	#FFEFD5;
   border: 3px solid #D3D3D3; 
   border-radius: 25px; 
+  align-items: center;
 }
 
 .product-image {
