--- a/public/style.css
+++ b/public/style.css
@@ -140,6 +140,11 @@ h2 {
 
 /* Slideshow */
 
+.slideshow-container {
+  display: flex; 
+  align-items: center;
+}
+
 .slideshow {
   margin: 0 auto;
   overflow: hidden;
