--- a/public/style.css
+++ b/public/style.css
@@ -379,3 +379,22 @@ p {
   background-color: darkblue;
   transition: 0.7s;
 }
+
+.submit {
+  background-color: orange;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-family: "Slabo 27px", serif;
+  font-size: 14px;
+  border-radius: 10px;
+}
+
+.submit:hover {
+  background-color: darkblue;
+  transition: 0.7s;
+}
