--- a/public/style.css
+++ b/public/style.css
@@ -339,6 +339,8 @@ p {
   flex: display;
   flex-direction: row;
   justify-content: center;
+  display: block;
+  text-align: center;
 }
 
 .signup {
